<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:weightSum="7"
    tools:context="com.michelapplication.moodtracker.controller.MainActivity">

    <LinearLayout
        android:layout_weight="1"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <RelativeLayout
            android:id="@+id/rl7"
            android:layout_weight="1"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/a_week_ago"
                android:fontFamily="sans-serif-condensed"
                android:textColor="@color/black"
                android:text="@string/a_week_ago"
                android:layout_width="match_parent"
                android:paddingLeft="@dimen/padding_left_text"
                android:layout_height="match_parent"/>

            <ImageButton
                android:id="@+id/btn_7"
                android:layout_centerVertical="true"
                android:src="@drawable/ic_comment_black_48px"
                android:layout_alignParentRight="true"
                android:layout_marginRight="@dimen/margin_right_button"
                android:background="@color/transparent"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>

        </RelativeLayout>

        <TextView
            android:layout_weight="1"
            android:background="@color/result_grey"
            android:layout_width="match_parent"
            android:layout_height="match_parent" />

    </LinearLayout>

    <LinearLayout
        android:layout_weight="1"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <RelativeLayout
            android:id="@+id/rl6"
            android:layout_weight="1"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/six_days_ago"
                android:fontFamily="sans-serif-condensed"
                android:textColor="@color/black"
                android:text="@string/six_days_ago"
                android:paddingLeft="@dimen/padding_left_text"
                android:layout_width="match_parent"
                android:layout_height="match_parent"/>

            <ImageButton
                android:id="@+id/btn_6"
                android:layout_centerVertical="true"
                android:src="@drawable/ic_comment_black_48px"
                android:layout_alignParentRight="true"
                android:layout_marginRight="@dimen/margin_right_button"
                android:background="@color/transparent"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>

        </RelativeLayout>

        <TextView
            android:layout_weight="1"
            android:background="@color/result_grey"
            android:layout_width="match_parent"
            android:layout_height="match_parent" />

    </LinearLayout>

    <LinearLayout
        android:layout_weight="1"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <RelativeLayout
            android:id="@+id/rl5"
            android:layout_weight="1"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/five_days_ago"
                android:fontFamily="sans-serif-condensed"
                android:textColor="@color/black"
                android:text="@string/five_days_ago"
                android:paddingLeft="@dimen/padding_left_text"
                android:layout_width="match_parent"
                android:layout_height="match_parent"/>

            <ImageButton
                android:id="@+id/btn_5"
                android:layout_centerVertical="true"
                android:src="@drawable/ic_comment_black_48px"
                android:layout_alignParentRight="true"
                android:layout_marginRight="@dimen/margin_right_button"
                android:background="@color/transparent"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>

        </RelativeLayout>

        <TextView
            android:layout_weight="1"
            android:background="@color/result_grey"
            android:layout_width="match_parent"
            android:layout_height="match_parent" />

    </LinearLayout>

    <LinearLayout
        android:layout_weight="1"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <RelativeLayout
            android:id="@+id/rl4"
            android:layout_weight="1"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/four_days_ago"
                android:fontFamily="sans-serif-condensed"
                android:textColor="@color/black"
                android:text="@string/four_day_ago"
                android:paddingLeft="@dimen/padding_left_text"
                android:layout_width="match_parent"
                android:layout_height="match_parent"/>

            <ImageButton
                android:id="@+id/btn_4"
                android:layout_centerVertical="true"
                android:src="@drawable/ic_comment_black_48px"
                android:layout_alignParentRight="true"
                android:layout_marginRight="@dimen/margin_right_button"
                android:background="@color/transparent"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>

        </RelativeLayout>

        <TextView
            android:layout_weight="1"
            android:background="@color/result_grey"
            android:layout_width="match_parent"
            android:layout_height="match_parent" />

    </LinearLayout>

    <LinearLayout
        android:layout_weight="1"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <RelativeLayout
            android:id="@+id/rl3"
            android:layout_weight="1"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/three_days_ago"
                android:fontFamily="sans-serif-condensed"
                android:textColor="@color/black"
                android:text="@string/three_days_ago"
                android:paddingLeft="@dimen/padding_left_text"
                android:layout_width="match_parent"
                android:layout_height="match_parent"/>

            <ImageButton
                android:id="@+id/btn_3"
                android:src="@drawable/ic_comment_black_48px"
                android:layout_centerVertical="true"
                android:layout_alignParentRight="true"
                android:layout_marginRight="@dimen/margin_right_button"
                android:background="@color/transparent"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>

        </RelativeLayout>

        <TextView
            android:layout_weight="1"
            android:background="@color/result_grey"
            android:layout_width="match_parent"
            android:layout_height="match_parent" />

    </LinearLayout>

    <LinearLayout
        android:layout_weight="1"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <RelativeLayout
            android:id="@+id/rl2"
            android:layout_weight="1"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/day_before_yesterday"
                android:fontFamily="sans-serif-condensed"
                android:textColor="@color/black"
                android:text="@string/day_before_yesterday"
                android:paddingLeft="@dimen/padding_left_text"
                android:layout_width="match_parent"
                android:layout_height="match_parent"/>

            <ImageButton
                android:id="@+id/btn_2"
                android:layout_centerVertical="true"
                android:src="@drawable/ic_comment_black_48px"
                android:layout_alignParentRight="true"
                android:layout_marginRight="@dimen/margin_right_button"
                android:background="@color/transparent"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>

        </RelativeLayout>

        <TextView
            android:layout_weight="1"
            android:background="@color/result_grey"
            android:layout_width="match_parent"
            android:layout_height="match_parent" />

    </LinearLayout>

    <LinearLayout
        android:layout_weight="1"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <RelativeLayout
            android:id="@+id/rl1"
            android:layout_weight="1"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/yesterday"
                android:fontFamily="sans-serif-condensed"
                android:textColor="@color/black"
                android:text="@string/yesterday"
                android:paddingLeft="@dimen/padding_left_text"
                android:layout_width="match_parent"
                android:layout_height="match_parent"/>

            <ImageButton
                android:id="@+id/btn_1"
                android:layout_centerVertical="true"
                android:src="@drawable/ic_comment_black_48px"
                android:layout_alignParentRight="true"
                android:layout_marginRight="@dimen/margin_right_button"
                android:background="@color/transparent"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>

        </RelativeLayout>

        <TextView
            android:layout_weight="1"
            android:background="@color/result_grey"
            android:layout_width="match_parent"
            android:layout_height="match_parent" />

    </LinearLayout>

</LinearLayout>

